fix drag content visibility

--- a/src/angular-libs/angular-golden-layout/themes/_template.scss
+++ b/src/angular-libs/angular-golden-layout/themes/_template.scss
@@ -25,6 +25,7 @@ $baseIconPath: '../icons/';
 
 .lm_dragProxy {
   .lm_content {
+    display: none !important;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
   }
 }
