--- a/src/modules/Chart/components/tcd/tcd.component.scss
+++ b/src/modules/Chart/components/tcd/tcd.component.scss
@@ -7,12 +7,6 @@
   }
 }
 
-.lm_dragProxy {
-  .tcd-component-loader {
-    display: none;
-  }
-}
-
 :host {
   display: flex;
   width: 100%;
